# homework_m2

./: .gitignore  README.md  example_main.py  main.py  pyproject.toml
src/: example.py  masks.py  processing.py  widget.py
tests/: conftest.py  test_example.py  test_masks.py  test_processing.py  test_widget.py
