[project]
name = "homework-9-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "homework_9"}]


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.14.1"
black = "^24.10.0"
isort = "^5.13.2"



[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = '.venv'

[tool.isort]
# максимальная длина строки
line_length = 119

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = ".venv"

# Смысл регулярного выражения для исключения папок не понимаю, поэтому пока что исключил только .venv
#'''
#(
#  /(
#      \.eggs # Исключить несколько общих каталогов
#    | \.git # в корне проекта
#    | \.hg
#    | \.mypy_cache
#    | \.tox
#    | \.venv
#    | dist
#  )/
#  | foo.py # Также отдельно исключить файл с именем foo.py
#                     # в корне проекта
#)
#'''


